# local_knowledge

./: .gitignore  .gitmodules  README.txt  pyproject.toml  update_archon.ps1
clients/: .env.example  pyproject.toml
clients/src/clients/: agent.py  cli.py  client copy.py  client.py  client_with_think.py  context_utils.py  prompts.py  streamlit_runner.py
supabase/docker/: .env-backup-250526  .env.example  docker-compose - copia.yml  docker-compose-backup-250526.yml  docker-compose.yml
supabase/docker/nginx-data/: database.sqlite  keys.json
supabase/docker/nginx-data/nginx/proxy_host/: 3.conf  4.conf  5.conf
supabase/docker/nginx-letsencrypt/accounts/acme-v02.api.letsencrypt.org/directory/cba38fa223d113c96460f2e8ec99ff75/: meta.json  private_key.json  regr.json
supabase/docker/volumes/api/: kong.yml
